Add app. go to /Users/nils/translator-app/models for models and copy in. it is to big for git

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>{% block title %} Hello! {% endblock %}</h1>
+    <h1>{% block title %}  {% endblock %}</h1>
 {% endblock %}
